# pinetime-rs

./: .gdbinit  Cargo.toml  Embed.toml  LICENSE  Makefile  README.md  memory.x
.cargo/: config.toml
docs/: ble_noted.md  ota.md
scripts/: flash.ocd
src/: devicestate.rs  main.rs
src/allocator/: mod.rs
src/display/: commands.rs  graphics.rs  mod.rs
src/drivers/: mod.rs
src/drivers/battery/: mod.rs
src/drivers/bluetooth/: attribute_provider.rs  config.rs  mod.rs
src/drivers/bluetooth/link/: mod.rs
src/drivers/bluetooth/phy/: channels.rs  mod.rs  packets.rs
src/drivers/clock/: mod.rs
src/drivers/display/: commands.rs  graphics.rs  mod.rs
src/drivers/flash/: external.rs  internal.rs  mod.rs
src/drivers/mcuboot/: footer.rs  header.rs  mod.rs
src/drivers/timer/: mod.rs
src/drivers/touchpanel/: mod.rs
src/pinetimers/: init.rs  mod.rs
src/pinetimers/tasks_impl/: ble_radio.rs  ble_radio_interrupt.rs  ble_timer.rs  ble_update.rs  ble_worker.rs  display_init.rs  draw_screen.rs  gpiote_interrupt.rs  idle.rs  init.rs  init_screen.rs  mod.rs  periodic_update_device_state.rs  pet_watchdog.rs  radio.rs  reboot.rs  redraw_screen.rs  self_test.rs  set_time.rs  transition.rs  validate.rs
src/touchpanel/: mod.rs
src/ui/screen/: dummy1.rs  dummy2.rs  main.rs  mod.rs  poes.rs
