[package]
name = "pinetime-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.6.10"
cortex-m-rtic = "1.0.0"
nrf52832-hal = { version = "0.14.1", features = ["rt"] }
embedded-hal = "0.2.6"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
fugit = "0.3.3"
embedded-graphics-core = "0.3.3"
embedded-graphics = "0.7.1"
linked_list_allocator = "0.9.1"
tinybmp = "0.3.1"
