[package]
name = "pinetime-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
cortex-m-rtic = "1.1.3"
nrf52832-hal = { git = "https://github.com/nrf-rs/nrf-hal", branch = "master", version = "0.16.0", features = ["rt"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
fugit = "0.3.6"
embedded-graphics-core = "0.3.3"
embedded-graphics = "0.7.1"
linked_list_allocator = "0.10.4"
# tinybmp = "0.3.1"
spin = "0.9.4"
chrono = { version = "0.4.22", default-features = false, features = ["alloc"] }
libm = "0.2.5"
embedded-storage = "0.3.0"
